--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
 asgiref==3.7.2
+bleach==6.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 Django==4.2.8
+django-debug-toolbar==4.2.0
+django-ranged-response==0.2.0
+django-robots==6.1
+django-summernote==0.8.20.0
+django-taggit==5.0.1
+idna==3.6
+pillow==10.2.0
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
-pillow
+urllib3==2.2.0
+webencodings==0.5.1
